--- a/themes/clean-blog/templates/index.html
+++ b/themes/clean-blog/templates/index.html
@@ -23,6 +23,7 @@
 {% endblock header %}
 
 {% block content %}
+	<p>{{SITE_DESC}}</p>
     {% for article in articles_page.object_list %}
         <div class="post-preview">
             <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">
