Front page: Moved config for picture to pelicanconf.py
- Added pics from Interlock
- Added pics to config file (most commented out)
- Removed stock images given with template

--- a/themes/clean-blog/templates/index.html
+++ b/themes/clean-blog/templates/index.html
@@ -6,7 +6,7 @@
     {% if HEADER_COVER %}
         <header class="intro-header" style="background-image: url('{{ HEADER_COVER }}')">
     {% else %}
-        <header class="intro-header" style="background-image: url('{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/home-bg.jpg')">
+        <header class="intro-header" style="background-image: url('{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/{{FRONT_PIC_BACKGROUND}}')">
     {% endif %}
         <div class="container">
             <div class="row">
