Front Page: Added Interlock logo

--- a/themes/clean-blog/templates/index.html
+++ b/themes/clean-blog/templates/index.html
@@ -12,9 +12,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h1>{{ SITENAME }}</h1>
-                        <hr class="small">
-                        <span class="subheading">{{ SITESUBTITLE }}</span>
+			<img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/interlock_gears.png" width="50%" height="50%">
                     </div>
                 </div>
             </div>
