--- a/themes/clean-blog/templates/base.html
+++ b/themes/clean-blog/templates/base.html
@@ -92,7 +92,7 @@
                     {% endfor %}
 
                     {% if DISPLAY_PAGES_ON_MENU %}
-                        {% for p in PAGES %}
+                        {% for p in PAGES or pages %}
                             <li{% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
                         {% endfor %}
                     {% else %}
