--- a/themes/clean-blog/templates/base.html
+++ b/themes/clean-blog/templates/base.html
@@ -93,8 +93,12 @@
 
                     {% if DISPLAY_PAGES_ON_MENU %}
                         {% for p in PAGES or pages %}
-                            <li{% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
-                        {% endfor %}
+			    {% if p.link %}
+				<li{% if p == page %} class="active"{% endif %}> <a href="{{ p.link }}">{{ p.title }}</a></li>
+			    {% else %}
+                                <li{% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
+			    {% endif %}
+			{% endfor %}
                     {% else %}
                         {% if DISPLAY_CATEGORIES_ON_MENU %}
                             {% for cat, null in categories %}
