--- a/themes/clean-blog/templates/base.html
+++ b/themes/clean-blog/templates/base.html
@@ -81,7 +81,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ SITEURL }}/">{{ SITENAME }}</a>
+                <a class="navbar-brand" href="{{ SITEURL }}/">{{ SITENAME }}{% if SITENAME_EXTRA %}<span class="hidden-xs"> - {{ SITENAME_EXTRA }}</span>{% endif %}</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
